# reactive

./: .gitignore  chatterd.crt  grades.txt
chatter/swiftUIChatter/swiftUIChatter/: Chatt.swift  ChattStore.swift  ContentView.swift  swiftUIChatterApp.swift
chatter/swiftUIChatter/swiftUIChatter.xcodeproj/: project.pbxproj
chatterd/: .env  chatterd.service  handlers.py  main.py  package-lock.json  package.json  pyproject.toml  server.js  toolbox.py  tsconfig.json
chatterd/cert/: chatterd.crt
chatterd/src/: db.ts  server.ts
chatterd/tools/: get_weather.json
llmDraft/swiftUIChatter/swiftUIChatter/: Chatt.swift  ChattScrollView.swift  ChattStore.swift  (+2 more)
llmDraft/swiftUIChatter/swiftUIChatter.xcodeproj/: project.pbxproj
llmaction/swiftUIChatter/: ChattStore.swift  ChattViewModelHolder.swift  ChatterID.swift  ContentView.swift  Info.plist  SigninView.swift  Toolbox.swift  swiftUIChatterApp.swift
llmaction/swiftUIChatter.xcodeproj/: project.pbxproj
llmchat/swiftUIChatter/: swiftUIChatterApp.swift
llmplay/swiftUIChatter/: Chatt.swift  ChattStore.swift  LocManager.swift
llmtools/swiftUIChatter/: ChattStore.swift  ContentView.swift  Toolbox.swift  swiftUIChatterApp.swift
llmtools/swiftUIChatter.xcodeproj/: project.pbxproj
signin/swiftUIChatter/: ChattStore.swift  ContentView.swift  Info.plist  swiftUIChatterApp.swift
signin/swiftUIChatter.xcodeproj/: project.pbxproj
swiftUIChatter.xcodeproj/: project.pbxproj
swiftUIChatter/swiftUIChatter/: ContentView.swift  swiftUIChatterApp.swift
swiftUIChatter/swiftUIChatter.xcodeproj/: project.pbxproj
(+21 files in other folders)
