[project]
name = "chatterd"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dataclasses-json>=0.6.7",
    "google-api-python-client>=2.194.0",
    "granian>=2.7.2",
    "http-client>=0.1.22",
    "httpx[http2]>=0.28.1",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic-core>=2.42.0",
    "sse-starlette>=3.3.3",
    "starlette>=1.0.0",
]
